@@ -422,6 +422,8 @@ static void __attribute__ ((__noreturn__))
 	int loop = 1;
 	long pid;
 	int exitvalue = EXIT_SUCCESS;
+    int optindex;
+    char *sig_option;
 
 	static const struct option longopts[] = {
 		{"list", optional_argument, NULL, 'l'},
@@ -445,17 +447,23 @@ static void __attribute__ ((__noreturn__))
 		signo = SIGTERM;
 
 	opterr=0; /* suppress errors on -123 */
-	while (loop == 1 && (i = getopt_long(argc, argv, "l::Ls:hV", longopts, NULL)) != -1)
+	while (loop == 1 && (i = getopt_long(argc, argv, "l::Ls:hV", longopts, &optindex)) != -1)
 		switch (i) {
 		case 'l':
-			if (optarg) {
+            sig_option = NULL;
+            if (optarg) {
+                sig_option = optarg;
+            } else if (argv[optindex+1] != NULL && argv[optindex+1][0] != '-') {
+                sig_option = argv[optindex+1];
+            }
+			if (sig_option) {
 				char *s;
-				s = strtosig(optarg);
+				s = strtosig(sig_option);
 				if (s)
 					printf("%s\n", s);
 				else
 					xwarnx(_("unknown signal name %s"),
-					      optarg);
+					      sig_option);
 				free(s);
 			} else {
 				unix_print_signals();
